--- a/config.toml
+++ b/config.toml
@@ -52,7 +52,7 @@ enableGitInfo = false
   # AUTHOR SETUP
 
   # Your details.
-  name = "Lena Smith"
+  name = "Lena Smithson"
   role = "Professor of Artificial Intelligence"
 
   # Organizations/Affiliations.
