--- a/config.toml
+++ b/config.toml
@@ -276,9 +276,14 @@ enableGitInfo = false
     link = "https://scholar.google.co.uk/citations?user=40chZXMAAAAJ"
 
    [[params.social]]
-    icon = "github"
-    icon_pack = "fab"
-    link = "https://github.com/gcushen"
+    icon = "researchgate"
+    icon_pack = "ai"
+    link = "https://www.researchgate.net/profile/Juergen_Anke"
+
+    [[params.social]]
+     icon = "orcid"
+     icon_pack = "ai"
+     link = "https://orcid.org/0000-0002-9324-9387"
 
   # Link to a PDF of your resume/CV from the About widget.
   # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
